issue #73 fixed images not showing up and not being resized properly

--- a/src/linagora.esn.sync/app/components/android/android.less
+++ b/src/linagora.esn.sync/app/components/android/android.less
@@ -1,4 +1,4 @@
-.sync-android-guide {
+.sync-android.guide {
   padding: 20px;
 
   img {
@@ -7,7 +7,7 @@
 }
 
 @media(min-width: @screen-md-min) {
-  .sync-android-guide {
+  .sync-android.guide {
     img {
       max-width: 350px;
     }
