--- a/src/linagora.esn.sync/app/components/ios/ios.less
+++ b/src/linagora.esn.sync/app/components/ios/ios.less
@@ -1,4 +1,4 @@
-.sync-ios-guide {
+.sync-ios.guide {
   padding: 20px;
 
   img {
@@ -7,7 +7,7 @@
 }
 
 @media(min-width: @screen-md-min) {
-  .sync-ios-guide {
+  .sync-ios.guide {
     img {
       max-width: 350px;
     }
