--- a/src/linagora.esn.sync/app/components/outlook/outlook.less
+++ b/src/linagora.esn.sync/app/components/outlook/outlook.less
@@ -1,4 +1,4 @@
-.sync-outlook-guide {
+.sync-outlook.guide {
   padding: 20px;
 
   img {
