--- a/src/linagora.esn.sync/app/components/thunderbird/thunderbird.less
+++ b/src/linagora.esn.sync/app/components/thunderbird/thunderbird.less
@@ -1,4 +1,4 @@
-.sync-thunderbird-guide {
+.sync-thunderbird.guide {
   padding: 20px;
 
   img {
